#-----------------------------------------------------------------
# Changes for Module::CPANTS::Site
#-----------------------------------------------------------------


0.76-tobe
    - if only one dist is found, directly redirect to overview page
    - search dist now case insensitive
    - actived JSON dist dependencies view (marcus.ramberg)
    - added kwalitee_overview.png
    - added by/*_kwalitee to stats (requested by Tux)


0.75    Tue Apr  8 01:22:24 CEST 2008
    * released at the Oslo QA Hackathon 2008
    - added stats/by/...
    - show a big fat warning if a run is in progress
    - show error messages in kwalitee view


0.74    Mon Apr  7 07:14:34 CEST 2008
    * released at the Oslo QA Hackathon 2008
    - updated TODO & news
    - added info on commit list


0.73    2008-01-29	
    - adapted to new Module::CPANTS::Schema
    - fixed dist-links to use overview
    - fixed error view


0.72    2007-10-30
    - split up dist/view into several smaller and much nicer pages
    - generally enhanced dist/view etc


0.71    2007-10-29
    - enhanced kwalitee/view
    - set WHILE_MAX to 3000 (until I find some time to redo the dist/view
      page) so that 'Other dists requiring' works for Test::More and 
      libwww-perl
    - some fixes to templates (dist name, run)
    - rearranged dist to work with Module::CPANTS::ProcessCPAN::MyBuild
    - moved config from yaml to app class, so we can use
      Module::CPANTS::ProcessCPAN::ConfigData->config(home)
    - fixed broken links (reported by hossman
      http://use.perl.org/comments.pl?sid=37332&cid=58593)


0.70    2007-10-24
    - moved to sqlite backend instead of postgres
    - add kwalitee of prereqs as suggested by Ian Malpass


0.64    2007-04-23
    - moved svn repo to http://code.google.com/p/cpants/
    - added depencies on DBD::Pg and Catalyst::Plugin::ConfigLoader
      reported by Nicholas Clark
    - order distros alphabetically on author page


0.63    2006-09-29